tests/int/list_command/snapshots/integration__int__list_command__filter__should_filter_by_substring.snap
---
source: tests/int/list_command/filter.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - list
    - "-F"
    - glob
---
success: true
exit_code: 0
----- stdout -----
[lib] advanced_globs
[lib] advanced_globs::aliased_module
[lib] advanced_globs::enum_variants
[lib] advanced_globs::internal
[lib] advanced_globs::layer1
[lib] advanced_globs::layer1::layer2
[lib] advanced_globs::layer1::layer2::layer3
[lib] advanced_globs::macro_module
[lib] advanced_globs::original
[lib] advanced_globs::prelude
[lib] advanced_globs::shadowing
[lib] advanced_globs::trait_providers
[lib] advanced_globs::unix_specific
[lib] advanced_globs::windows_specific
[lib] glob_patterns
[lib] glob_patterns::constants
[lib] glob_patterns::mixed_exports
[lib] glob_patterns::outer
[lib] glob_patterns::outer::inner
[lib] glob_patterns::self_ref
[lib] glob_patterns::set_a
[lib] glob_patterns::set_b
[lib] glob_patterns::traits
[lib] glob_patterns::types
[lib] glob_patterns::utilities
[lib] glob_showcase
[lib] glob_showcase::api
[lib] glob_showcase::config
[lib] glob_showcase::config::all
[lib] glob_showcase::config::client
[lib] glob_showcase::config::logging
[lib] glob_showcase::config::server
[lib] glob_showcase::database
[lib] glob_showcase::database::connection
[lib] glob_showcase::database::query
[lib] glob_showcase::database::transaction
[lib] glob_showcase::errors
[lib] glob_showcase::models
[lib] glob_showcase::prelude
[lib] glob_showcase::traits
[lib] glob_showcase::utils
[lib] glob_showcase::utils::collection
[lib] glob_showcase::utils::math
[lib] glob_showcase::utils::string
[lib] uses_empty_glob

----- stderr -----
