tests/int/list_command/snapshots/integration__int__list_command__filter__should_filter_by_substring_with_source.snap
---
source: tests/int/list_command/filter.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/fixtures/modules
    - list
    - "-F"
    - nesting
    - "-s"
---
success: true
exit_code: 0
----- stdout -----
nesting                          src/nesting/mod.rs
nesting::level1                  src/nesting/level1/mod.rs
nesting::level1::level2          src/nesting/level1/level2/mod.rs
nesting::level1::level2::level3  src/nesting/level1/level2/level3.rs

----- stderr -----
