tests/int/list_command/snapshots/integration__int__list_command__filter__should_filter_combined_with_depth.snap
---
source: tests/int/list_command/filter.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - list
    - "-F"
    - glob
    - "-d"
    - "1"
---
success: true
exit_code: 0
----- stdout -----
[lib] advanced_globs
[lib] glob_patterns
[lib] glob_showcase
[lib] uses_empty_glob

----- stderr -----
