tests/int/list_command/snapshots/integration__int__list_command__filter__should_filter_with_no_matches.snap
---
source: tests/int/list_command/filter.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/fixtures/modules
    - list
    - "-F"
    - nonexistent_module_xyz
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
